--- a/inst/doc/Kim.Rnw
+++ b/inst/doc/Kim.Rnw
@@ -213,12 +213,29 @@ probe-level standard deviation across ten identical whole blood replicates,
 from five BeadChips with significant positional artifacts. 
 
 <<probeSDs, eval=T, echo=T>>=
+method.name = function(x) strsplit(x, '\\.')[[1]][1]
+TMMs = list(raw=TMM, lumi=TMM.lumi.bg, normexp=TMM.nexp, 
+            gammactl=TMM.ctl, gammamix=TMM.mix) 
+TMM.SD.both = data.frame(SD=unlist(lapply(TMMs, function(x) rowSds(betas(x)))))
+TMM.SD.Cy5 = data.frame(
+                SD=unlist(lapply(TMMs, function(x) rowSds(betas(x)[cy5(x),]))))
+TMM.SD.Cy3 = data.frame(
+                SD=unlist(lapply(TMMs, function(x) rowSds(betas(x)[cy3(x),]))))
+TMM.SD.both$method = as.factor(sapply(rownames(TMM.SD.both), method.name))
+TMM.SD.Cy5$method = as.factor(sapply(rownames(TMM.SD.Cy5), method.name))
+TMM.SD.Cy3$method = as.factor(sapply(rownames(TMM.SD.Cy3), method.name))
+TMM.SD.both$channel = 'both'
+TMM.SD.Cy5$channel = 'Cy5'
+TMM.SD.Cy3$channel = 'Cy3'
+TMM.SDs = rbind(TMM.SD.both, TMM.SD.Cy5, TMM.SD.Cy3)
+p = qplot(data=TMM.SDs, geom='boxplot', y=SD, x=method, fill=method, 
+          main='Background correction and probe-level SD', facets=.~channel)
 @ 
 
 \begin{figure}[h!]
 \centering
 <<probeLevelSDs, fig=T, eval=T>>=
-print(p)
+print(p) + scale_y_log10() + theme_bw()
 @
 \caption{probe-level standard deviations
 \label{fig:probeSDs}
